Refactorización de los test: usando @Builder